Correct spacing on LoC request PDF (#1841)

--- a/app/assets/stylesheets/letters_of_credit.scss
+++ b/app/assets/stylesheets/letters_of_credit.scss
@@ -90,7 +90,7 @@
   }
   dt {
     float: left;
-    padding: 8px 0px 0 0;
+    padding: 8px 0 0 0;
     margin-right: 150px;
   }
   dd {
@@ -256,7 +256,7 @@
     width: 500px;
     float: right;
     text-align: left;
-    margin: 0px;
+    margin: 0;
   }
 }
 
@@ -337,11 +337,7 @@
   }
 }
 
-.letters-of-credit-view-pdf {
-  display: none;
-}
-
-.letters-of-credit-amend-view-pdf {
+.letters-of-credit-view-pdf, .letters-of-credit-amend-view-pdf {
   display: none;
 }
 
@@ -351,7 +347,7 @@
     h1 {
       @include typography-print-header;
       float: none;
-      margin: 15px 0 0;
+      margin: 12px 0 7px 0;
     }
     h2 {
       @include typography-print-subheader;
@@ -366,11 +362,11 @@
       margin: 0;
     }
     .report-print-details {
-      margin-bottom: 15px;
+      margin-bottom: 0;
       h2, .report-print-sta {
         @include typography-print-details;
         display: inline-block;
-        margin: 0;
+        margin: 0 0 15px 0;
         white-space: nowrap;
       }
     }
